--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <header>
         <div class="header_main">
-            
+            <div class="beacon_cutout">
+            </div>
         </div>  
     </header>
     
