--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
 <body>
     <header>
         <div class="header_main">
-            <div class="beacon_cutout">
+            <div class="beacon_logo">
+                <img src="./images/lighthouse.svg" alt="Lighthouse" class="beacon"/>
             </div>
+                
+            <div class="beacon_cutout">
+                BEACON BISTRO
+            </div>
+
+            <div class="chef_logo">
+                <img src="./images/restaurant.svg" alt="Bistro" class="chef"/>
+            </div>  
         </div>  
     </header>
     
