--- a/index.html
+++ b/index.html
@@ -1,28 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beacon Bistro</title>
-    <link rel="icon" type="image/x-icon" href="./images/favicon.ico"/>
-    <link rel="stylesheet" href="styles.css"/>
-</head>
-<body>
-    <header>
-        <div class="header_main">
-            <div class="beacon_logo">
-                <img src="./images/lighthouse.svg" alt="Lighthouse" class="beacon"/>
-            </div>
-                
-            <div class="beacon_cutout">
-                BEACON BISTRO
-            </div>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap"
+      rel="stylesheet"
+    />
 
-            <div class="chef_logo">
-                <img src="./images/restaurant.svg" alt="Bistro" class="chef"/>
-            </div>  
-        </div>  
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Beacon Bistro</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <div class="header_main">
+        <div class="beacon_logo">
+          <img src="./images/lighthouse.svg" alt="Lighthouse" class="beacon" />
+        </div>
+
+        <div class="beacon_container">
+          <div class="beacon_cutout"></div>
+          <div class="beacon_text roboto-condensed-400">The Beacon Bistro</div>
+        </div>
+
+        <div class="chef_logo">
+          <img src="./images/restaurant.svg" alt="Bistro" class="chef" />
+        </div>
+      </div>
     </header>
-    
-</body>
+  </body>
 </html>
